2008-02-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/tabulate.c: More informative error message if the current plot
	style is not fully output to a table.

2008-02-01  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/datafile.c (df_readbinary): Fix off-by-one error in the implicit
	"column 0" of non-matrix binary data files.

2008-01-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do_3dplot): Revamp main loop over 3D plots.
	Previously "unset surface" would bypass all plot types except contours.
	Now we have many 3D plot types other than surfaces that should not be
	bypassed simply because the surfaces are turned off.
	The old logic was bogus anyhow, since there were many tests for
	"if (!draw_surface)" inside the main "if (draw_surface)" block.
	The result: now I can plot labels and vectors on top of my contours.
	In general, 'splot ... with {labels|vectors|image|rgbimage}'
	now ignores both "{un}set contour" and "{un}set surface"

	* src/plot3d.c (eval_3dplots): Don't bother to check for non-grid data
	in plot types 'with {labels|vectors|image|rgbimage}'.

2008-01-28  Petr Mikulik  <mikulik@physics.muni.cz>

	* graph3d.c (map3d_getposition, map3d_position_r): Fix case of y graph
	coordinate and splot_map.

2008-01-27  Ethan A Merritt  <merritt@u.washington.edu>

	* graph3d.c (cntr3d_lines) util3d.c (polyline3d_next) gadgets.c:
	Clip contour lines to the plot boundary in "set view map" mode.
	Remove dead code related to these routines.
	Bug #1745598

2008-01-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): Be more precise in estimating the vertical
	space required to accommodate rotated tick labels on x and x2 axes.
	Bug #1879907

2008-01-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term_api.h src/graphics.c (do_plot) src/graph3d.c (do_3dplot):
	Bracket each individual plot within a figure by a pair of calls to
	term->layer(TERM_LAYER_BEFORE_PLOT) term->layer(TERM_LAYER_AFTER_PLOT).
